--- a/index.html
+++ b/index.html
@@ -75,11 +75,9 @@
 
 
 <section id="main-menu-pane" class="row text-center main-menu">
-  
+  <h4><a class="menu-item" href="https://breeder.io">Breeder.io</a></h4>
   <h4><a class="menu-item" href="https://www.2ez.io">2ez.io</a></h4>
-  
   <h4><a class="menu-item" href="http://kouyatakao.hatenablog.com">blog</a></h4>
-  
 </section>
 
 
